--- a/content/help.html
+++ b/content/help.html
@@ -329,6 +329,11 @@ Also common prefix like 'Re:', 'Fw:', [mail-list-name] will be removed before se
 <a name="version_history"></a>
 <h3>Version history</h3>
 <ul><li>
+Version 1.3: <ul>
+<li>Works with TB 60 nightly, drop support for TB older than 52</li>
+<li>Fixed issue with 'only' filter</li>
+</ul>
+</li><li>
 Version 1.2: <ul>
 <li>Add 'fromto' token</li>
 <li>Add option for search input box timeout</li>
