restartless almost done

--- a/content/help.html
+++ b/content/help.html
@@ -263,7 +263,7 @@ the setting being lost when restarting TB, but also you can edit the properties 
 should be searched or not with a global non-faceted search (CTRL+Enter).</p>
 <p>Where "ExpressionSearch" is created can also be set in the option dialog, By default, it's
 the root folder of the current disaplyed folder</p>
-<p>You can back to original folder by press Ctrl+LEFT</p>
+<p>You can back to original folder by press Ctrl+Alt+LEFT</p>
 
 <h3>More complex searching</h3>
 <p>The quick search bar allows you use the simple expressions from above, but it also
