--- a/content/help.html
+++ b/content/help.html
@@ -488,18 +488,18 @@ If you do need to change the hotkeys, please try other extensions below.
 <h3>Other Extensions</h3>
 You can try the following extensions to make your Thunderbird more convenient.<br/>
 <ul>
-<li><a href='https://addons.mozilla.org/en-US/thunderbird/addon/gmail-conversation-view/'>GMail Conversation View</a> and <a href='https://github.com/protz/GMail-Conversation-View/wiki/displaying-your-own-messages-in-the-inbox'>How to display sent messages in Inbox?</a></li>
+<li><a href='https://addons.thunderbird.net/en-US/thunderbird/addon/gmail-conversation-view/'>GMail Conversation View</a> and <a href='https://github.com/protz/GMail-Conversation-View/wiki/displaying-your-own-messages-in-the-inbox'>How to display sent messages in Inbox?</a></li>
 <li><a href='http://kb.mozillazine.org/Keyconfig_extension'>Keyconfig</a></li>
-<li><a href='https://addons.mozilla.org/en-US/thunderbird/addon/nostalgy/'>Nostalgy</a></li>
+<li><a href='https://addons.thunderbird.net/en-US/thunderbird/addon/nostalgy/'>Nostalgy</a></li>
 </ul>
 
 <h3>Thanks</h3>
 <ul><li>
 Ken Mixter - Original Author of GMailUI
 </li><li>
-savo_msu - Author of <a href='https://addons.mozilla.org/af/thunderbird/addon/one-click-search/'>One Click Search</a>
+savo_msu - Author of <a href='https://addons.thunderbird.net/af/thunderbird/addon/one-click-search/'>One Click Search</a>
 </li><li>
-Kent James - Author of <a href='https://addons.mozilla.org/en-US/thunderbird/addon/filtaquilla/'>FiltaQuilla</a>
+Kent James - Author of <a href='https://addons.thunderbird.net/en-US/thunderbird/addon/filtaquilla/'>FiltaQuilla</a>
 </li><li>
 Jiten Dedhia - Suggest for 'toonly' search
 </li><li>
