Fixes wangvisual/expression-search#47: Inverted search?
It might not be intuitive on how to run said type of search, hence the inclusion to help.

Signed-off-by: Ntentos Stavros <133706+stdedos@users.noreply.github.com>

--- a/content/help.html
+++ b/content/help.html
@@ -217,7 +217,17 @@ fields, and the <i>body</i>.
 <b>3+2</b>
 </p>
 <p>If the expression looks like an arithmetic one, when you press enter, it will be calculated and the result will be shown in the search box.
-</p></li></ol>
+</p></li>
+
+<li><p>
+<b>from:-foo from:-bar [...]</b>
+</p>
+<p>So-called <a href='https://github.com/wangvisual/expression-search/issues/47'>Inverted Search</a>.
+This is a <kbd>not x and not y [...]</kbd> search for the selected attribute (Here: <var>from:</var>).<br/>
+This is the GMail search-equivalent of: <kbd>-foo -bar</kbd>.
+</p></li>
+
+</ol>
 
 <h3>Hot Key</h3>
 <p>
