--- a/content/help.html
+++ b/content/help.html
@@ -1,4 +1,4 @@
-                                                                          <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -168,7 +168,7 @@ date format can be checked <a href='https://developer.mozilla.org/en/JavaScript/
 af:(3:0 -4:0) will search for messages in current view that <i>date</i> between 3am to 4am EVERY day. 
 </p></li><li><p>
 
-<b>date:2011/01</b> or <b>date:2011/01/03</b> or <b>d:" 03:"</b> or in zh-CN locale <b>d:2011?3?</b>
+<b>date:2011/01</b> or <b>date:2011/01/03</b> or <b>d:" 03:"</b> or in zh-CN locale <b>d:2011年3月</b>
 </p>
 <p>This expression searches all messages in the current folder or view to match date.
 The internal format for compare is "yyyy/mm/dd hh:mm:ss", locale date is also supported.
