--- a/content/about.xhtml
+++ b/content/about.xhtml
@@ -1,35 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?xml-stylesheet href="chrome://global/skin/" type="text/css"?>
-<?xml-stylesheet href="resource://expressionsearch/skin/overlay.css" type="text/css"?>
+<?xml-stylesheet href="chrome://expressionsearch/skin/overlay.css" type="text/css"?>
 
 <!DOCTYPE dialog SYSTEM "chrome://expressionsearch/locale/ExpressionSearch.dtd">
 
-<dialog id = "aboutID" title="&about.about; Expression Search" orient="vertical" autostretch="always" onload="sizeToContent()" buttons="accept" 
-
-
-xmlns:html="http://www.w3.org/1999/xhtml"
-xmlns="http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul"
-
-
-
->
+<dialog title="&about.about; Expression Search" orient="vertical" autostretch="always" onload="sizeToContent()" buttons="accept" xmlns="http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul">
   <script type="application/x-javascript" src="chrome://expressionsearch/content/common.js"/>
-
   <stringbundleset id="stringbundleset">
     <stringbundle src="chrome://expressionsearch/locale/ExpressionSearch.properties" id="your-extension-strings" />
   </stringbundleset>
-
   <groupbox align="center" orient="horizontal">
     <vbox>
-      <text class='abouthead' value="&about.author;"/>
-      <text value="Opera Wang"/>
-      <text value=""/>
-      <text class='abouthead' id="contributorsTitle" value="&about.contributors.label;"/>
-      <text value="Ken Mixter - original GMailUI"/>
-      <text value=""/>
-      <text class='textlink' value="&about.help;" onclick="ExpressionSearchCommon.loadURL('expressionsearch.helpfile', 'expressionsearch.help');"/>
+      <label class='abouthead' value="&about.author;"/>
+      <label value="Klaus Buecher/opto for TB 68+, Opera Wang 2006 - 2019"/>
+      <label value=""/>
+      <label class='abouthead' id="contributorsTitle" value="&about.contributors.label;"/>
+      <label value="Ken Mixter - original GMailUI before 2006"/>
+      <label value=""/>
+      <label class='textlink' value="&about.help;" onclick="ExpressionSearchCommon.showHelpFile('expressionsearch.helpfile', 'expressionsearch.help');"/>
     </vbox>
   </groupbox>
-
 </dialog>
