--- a/content/help_bckg.html
+++ b/content/help_bckg.html
@@ -342,11 +342,17 @@ Also common prefix like 'Re:', 'Fw:', [mail-list-name] will be removed before se
 <a name="version_history"></a>
 <h3>Version history</h3>
 <ul><li>
-  Version 2.4beta: <ul>
+Version 2.5beta: <ul>
+    <li>Works with TB78, about + help dialog</li>
+    <li></li>
+    </ul>
+    </li><li>
+Version 2.4beta: <ul>
     <li>Works with TB78, drop support for old TB pre 78</li>
     <li></li>
     </ul>
-    </li><li>Version 1.4: <ul>
+    </li><li>
+Version 1.4: <ul>
 <li>Works with TB 63 nightly, drop support for TB older than 60</li>
 <li>Change from legacy XUL overly addon to restartless addon</li>
 </ul>
