--- a/content/about.xhtml
+++ b/content/about.xhtml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?xml-stylesheet href="chrome://global/skin/" type="text/css"?>
-<?xml-stylesheet href="chrome://expressionsearch/skin/overlay.css" type="text/css"?>
+<?xml-stylesheet href="resource://expressionsearch/skin/overlay.css" type="text/css"?>
 
 <!DOCTYPE dialog SYSTEM "chrome://expressionsearch/locale/ExpressionSearch.dtd">
 
