--- a/content/esPrefDialog.xhtml
+++ b/content/esPrefDialog.xhtml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <?xml-stylesheet href="chrome://global/skin/" type="text/css"?>
-<?xml-stylesheet href="chrome://expressionsearch/skin/overlay.css" type="text/css"?>
+<?xml-stylesheet href="resource://expressionsearch/skin/overlay.css" type="text/css"?>
 <!-- for folder selector -->
 <?xml-stylesheet href="chrome://messenger/skin/dialogs.css" type="text/css"?>
 <?xml-stylesheet href="chrome://messenger/skin/folderMenus.css" type="text/css"?>
