Expression Search NG v 3.1 for TB 91

--- a/content/esPrefDialog.xhtml
+++ b/content/esPrefDialog.xhtml
@@ -4,6 +4,7 @@
 <!-- for folder selector -->
 <?xml-stylesheet href="chrome://messenger/skin/dialogs.css" type="text/css"?>
 <?xml-stylesheet href="chrome://messenger/skin/folderMenus.css" type="text/css"?>
+<?xml-stylesheet href="chrome://messenger/skin/menulist.css" type="text/css"?>
 <?xml-stylesheet href="chrome://messenger/skin/preferences/preferences.css" type="text/css"?>
 
 <!DOCTYPE dialog SYSTEM "chrome://expressionsearch/locale/ExpressionSearch.dtd">
@@ -23,7 +24,7 @@
         <checkbox preference="extensions.expressionsearch.select_msg_on_enter" label="&expressionsearch.option.select_on_enter;"/>
         <hbox>
           <checkbox preference="extensions.expressionsearch.reuse_existing_folder" label="&expressionsearch.option.reusefolder;"/>
-          <text class='textlink' value="?" onclick="ExpressionSearchCommon.loadTab('expressionsearch.helpfile','#keep_saved_search');"/>
+          <label class='textlink' value="?" onclick="ExpressionSearchCommon.loadTab('expressionsearch.helpfile','#keep_saved_search');"/>
         </hbox>
         <checkbox preference="extensions.expressionsearch.enable_verbose_info" label="&expressionsearch.option.enable_verbose_info;"/>
         <hbox align='center'>
@@ -45,8 +46,8 @@
           </tooltip>
         </hbox>
         <hbox align='center'>
-          <text value='&expressionsearch.option.when_press_ctrl_plus_enter;' />
-          <menulist id="esNewFolderPicker" flex="1" preference='extensions.expressionsearch.virtual_folder_path' oncommand="onFolderPick(event);">
+          <label flex="2" value='&expressionsearch.option.when_press_ctrl_plus_enter;' />
+          <menulist id="esNewFolderPicker" flex="3" class = "menuli"  preference='extensions.expressionsearch.virtual_folder_path' oncommand="onFolderPick(event);">
             <menupopup id="esNewFolderPopup" type="folder" is="folder-menupopup" mode="newFolder" showFileHereLabel="true" fileHereLabel="here">
               <menuitem label='&expressionsearch.option.use_root_folder;' value='' class='folderMenuItem' SpecialFolder="Virtual" />
               <menuseparator/>
@@ -54,7 +55,7 @@
           </menulist>
         </hbox>
         <hbox align='center'>
-          <menulist preference='extensions.expressionsearch.showbuttonlabel'>
+          <menulist flex="2" class = "menuli" preference='extensions.expressionsearch.showbuttonlabel'>
             <menupopup>
               <menuitem label="&expressionsearch.option.showbuttonlabel.auto;" value="0"/>
               <menuitem label="&expressionsearch.option.showbuttonlabel.show;" value="1"/>
@@ -62,18 +63,18 @@
               <menuitem label="&expressionsearch.option.showbuttonlabel.hideall;" value="3"/>
             </menupopup>
           </menulist>
-          <text value='&expressionsearch.option.showbuttonlabel;' />
+          <label flex="2" value='&expressionsearch.option.showbuttonlabel;' />
         </hbox>
         <hbox align='center' tooltip="esResultsLabelTooltip">
-          <text value='&expressionsearch.option.results_label_size.before;' />
-          <menulist preference='extensions.expressionsearch.results_label_size'>
+          <label value='&expressionsearch.option.results_label_size.before;' />
+          <menulist class = "menuli" preference='extensions.expressionsearch.results_label_size'>
             <menupopup tooltip="esResultsLabelTooltip">
               <menuitem label="&expressionsearch.option.results_label_size.auto;" value="0"/>
               <menuitem label="&expressionsearch.option.results_label_size.show;" value="1"/>
               <menuitem label="&expressionsearch.option.results_label_size.hide;" value="2"/>
             </menupopup>
           </menulist>
-          <text value='&expressionsearch.option.results_label_size.after;' />
+          <label value='&expressionsearch.option.results_label_size.after;' />
           <tooltip id="esResultsLabelTooltip">
             <description value="&expressionsearch.option.results_label_size.tip;"/>
             <image src="chrome://expressionsearch/content/results_label_size.jpg"/>
@@ -106,33 +107,21 @@
     <html:fieldset id="expressionsearch-pane-c2ssetting">
       <html:legend>&expressionsearch.dialog.c2s_settings;</html:legend>
       <vbox>
-        <grid id="c2sEnableGrid">
-            <columns>
-              <column flex="1"/>
-              <column flex="1"/>
-            </columns>
-            <rows>
-              <row>
+        <table id="c2sEnableGrid">
+              <tr>
                 <checkbox preference="extensions.expressionsearch.c2s_enableCtrl" label="&expressionsearch.option.c2s_enableCtrl;"/>
                 <checkbox preference="extensions.expressionsearch.c2s_enableShift" label="&expressionsearch.option.c2s_enableShift;"/>
-              </row>
-              <row>
+              </tr>
+              <tr>
                 <checkbox preference="extensions.expressionsearch.c2s_enableCtrlReplace" label="&expressionsearch.option.c2s_enableCtrlReplace;"/>
                 <checkbox preference="extensions.expressionsearch.c2s_enableShiftReplace" label="&expressionsearch.option.c2s_enableShiftReplace;"/>
-              </row>
-            </rows>
-        </grid>
-        <text/>
+              </tr>
+              </table>
         <hbox>
-          <text value="&expressionsearch.dialog.c2s_replace_title;"/>
-          <text class='textlink' value="?" onclick="ExpressionSearchCommon.loadTab('expressionsearch.helpfile','#c2s_Replace');"/>
+          <label value="&expressionsearch.dialog.c2s_replace_title;"/>
+          <label class='textlink' value="?" onclick="ExpressionSearchCommon.loadTab('expressionsearch.helpfile','#c2s_Replace');"/>
         </hbox>
-        <grid id="c2sRegexpGrid">
-          <columns>
-            <column flex="1"/>
-            <column flex="1000"/>
-          </columns>
-          <rows>
+ <!--       <grid id="c2sRegexpGrid"> -->
             <row>
               <label value="&expressionsearch.dialog.c2s_match;"/>
               <html:input preference="extensions.expressionsearch.c2s_regexpMatch" id="c2sMatch"/>
@@ -141,8 +130,6 @@
               <label value="&expressionsearch.dialog.c2s_replace;"/>
               <html:input preference="extensions.expressionsearch.c2s_regexpReplace" id="c2sReplace"/>
             </row>
-          </rows>
-        </grid>
         <checkbox preference="extensions.expressionsearch.c2s_removeDomainName" label="&expressionsearch.option.c2s_removeDomainName;"/>
       </vbox>
     </html:fieldset>
@@ -153,10 +140,9 @@
         <hbox>
           <image style="cursor:pointer;" src="donate-with-paypal.png" onclick="ExpressionSearchCommon.loadDonate('paypal');" />
           <label value="               " flex="100"/>
-          <image style="cursor:pointer;" src="donate-with-alipay.png" tooltip='expressionsearch-perfDialogAlipayDonate' onclick="ExpressionSearchCommon.loadDonate('alipay');" />
+     <!--     <image style="cursor:pointer;" src="donate-with-alipay.png" tooltip='expressionsearch-perfDialogAlipayDonate' onclick="ExpressionSearchCommon.loadDonate('alipay');" />   -->
  
         </hbox>
-        <label/>
         <hbox>
           <label class='textlink' value="&expressionsearch.option.help;" onclick="ExpressionSearchCommon.loadURL('expressionsearch.helpfile', 'expressionsearch.help');"/><label/>
           <label class='textlink' value="&expressionsearch.option.issues;" onclick="ExpressionSearchCommon.loadUseProtocol('https://github.com/opto/expression-search-NG/issues');"/><label/>
