--- a/html/update.html
+++ b/html/update.html
@@ -51,8 +51,8 @@
     </p>
 
     <h3>Bugfixes</h3>
+    <p>In 3.4.5: RegEx and click2search for subject are now working again.</p>
     <p>In 3.4.3: filename, age and only are now working again.</p>
-
     <h2>Getting started</h2>
     <ul>
       <li>Read the <a href="#" data-window-href="expressionsearch.helpfile">help page</a> for a detailed description of
